# rainscribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICK_START.md  README.md  USAGE.md  docker-compose.yml  live-from-hls.py  media.py  player.html  prepare_for_github.sh  pyproject.toml  rainscribe.py  requirements.txt  test_integration.py  transcription.py
audio-extractor/: Dockerfile  main.py
caption-generator/: Dockerfile  main.py
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  audio-extractor-deployment.yaml  caption-generator-deployment.yaml  deployment-audio-extractor.yaml  deployment-caption-generator.yaml  deployment-nginx.yaml  deployment-stream-mirroring.yaml  deployment-transcription-service.yaml  ingress.yaml  init-job.yaml  job-volume-init.yaml  nginx-deployment.yaml  nginx-service.yaml  pvc.yaml  service-nginx.yaml  stream-mirroring-deployment.yaml  transcription-service-deployment.yaml
nginx/: Dockerfile  nginx.conf
nginx/html/: index.html
scripts/: subtitle_symlink_service.sh  update_subtitle_symlinks.sh  update_subtitle_symlinks_loop.sh
shared/: __init__.py  logging_config.py  monitoring.py  offset_calculator.py  reference_clock.py  webvtt_segmenter.py
shared-volume-init/: Dockerfile  init.sh
stream-mirroring/: Dockerfile  main.py
transcription-service/: Dockerfile  main.py
